<resources>

    <string name="app_name">Job Directory</string>
    <string name="action_favorite">My favorites</string>
    <string name="action_home">Back to home</string>
    <string name="action_languages">Languages</string>
    <string name="action_settings">My settings</string>
    <string name="action_search_reset">Search reset</string>
    <string name="action_login">Zone admin</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="action_main_data_demo">*** Generate demo data ***</string>

    <string name="listJob_0Found">job found</string>
    <string name="listJob_found">jobs found</string>

    <string name="main_title">What job are you looking for?</string>
    <string name="main_title_FR">Quel job cherchez-vous?</string>
    <string name="main_category">which category</string>
    <string name="main_category_FR">Quelle catégorie</string>
    <string name="main_location">which location</string>
    <string name="main_location_FR">Quelle localité</string>
    <string name="main_findIt">Find it</string>
    <string name="main_findIt_FR">Chercher</string>

    <string name="category_title">Select a category</string>
    <string name="location_title">Select a location</string>

    <string name="about_title">A propos</string>
    <string name="about_copyright">© jobDirectory 2017</string>
    <string name="about_version">version: 1.1</string>
    <string name="about_contact">info@jobdirectory.com</string>

    <string name="settings_titre">My settings</string>
    <string name="settings_languages">Language</string>
    <string name="settings_languages1">EN</string>
    <string name="settings_languages2">FR</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme1">Standard</string>
    <string name="settings_theme2">Blue</string>
    <string name="settings_btn">Save settings</string>
    <string name="title_activity_login_android">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="edit_job_title">Edit job announcement</string>
    <string name="edit_job_enter_title">Enter a title</string>
    <string name="edit_job_enter_description">Enter a description</string>
    <string name="edit_job_save_btn">Save</string>
    <string name="edit_job_delete_btn">Delete</string>

    <string name="edit_specialization_title">Edit a specialization in :</string>
    <string name="edit_specialization_enter">Enter a name</string>
    <string name="edit_specialization_save_btn">Save</string>
    <string name="edit_specialization_delete_btn">Delete</string>

    <string name="edit_location_title">Add a new location</string>
    <string name="edit_location_enter_name">Enter a name</string>
    <string name="edit_location_enter_zip">Enter a zip code</string>
    <string name="edit_location_save_btn">Save</string>
    <string name="edit_location_delete_btn">Delete</string>

    <string name="login_title">Login</string>

</resources>

