<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_48dp"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_white_48dp"
        android:title="@string/action_favorite"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_white_48dp"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <!--
    <item android:id="@+id/action_dbManager"
        android:title="dbManager"
        app:showAsAction="never"/>
        -->

</menu>