<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_white_48dp"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_search_reset"
        android:icon="@drawable/ic_cached_white_48dp"
        android:title="@string/action_search_reset"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>