<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jobdirectory.jobdirectory.ListCategoryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorActionBar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/categoryBtn"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorActionBar"
        android:onClick="displayListCategory"
        android:text="@string/main_category"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Button
        android:id="@+id/locationBtn"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorActionBar"
        android:onClick="displayListLocation"
        android:text="@string/main_location"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_title"
        android:textColor="@color/colorActionBar"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <Button
        android:id="@+id/findItBtn"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:onClick="displayListJob"
        android:text="@string/main_findIt"
        android:textAllCaps="false"
        android:textColor="@color/colorActionBar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/categoryBtn"
        app:layout_constraintTop_toBottomOf="@+id/categoryBtn" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/locationBtn"
        app:layout_constraintTop_toBottomOf="@+id/locationBtn" />
</android.support.constraint.ConstraintLayout>